force-app/main/default/objects/Roaster__c/Roaster__c.object-meta.xml
<CustomObject>
    <label>Class Session</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>