force-app/main/default/objects/Roaster__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipName>Roasters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>