force-app/main/default/objects/Roaster__c/fields/Class_Names__c.field-meta.xml
<CustomField>
    <fullName>Class_Names__c</fullName>
    <formula>Class_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Names</label>
    <type>Text</type>
</CustomField>