force-app/main/default/objects/Roaster__c/fields/Class_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Scheduled_Date__c</fullName>
    <label>Class Scheduled Date</label>
    <type>Date</type>
</CustomField>