force-app/main/default/objects/Roaster__c/fields/CNA_Class_Type__c.field-meta.xml
<CustomField>
    <fullName>CNA_Class_Type__c</fullName>
    <label>CNA Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classroom/Theory</fullName>
            </value>
            <value>
                <fullName>Clinical/Preceptor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>