force-app/main/default/objects/Roaster__c/fields/CNA_Status__c.field-meta.xml
<CustomField>
    <fullName>CNA_Status__c</fullName>
    <label>CNA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>