force-app/main/default/objects/Roaster__c/fields/Count_of_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Attendance__c</fullName>
    <label>Count of Attendance</label>
    <summaryForeignKey>Attendance__c.Roaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>