force-app/main/default/objects/Roaster__c/fields/Count_of_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Enrollment__c</fullName>
    <description>This field will calculate the Enrolled provider counts from the Regular Class Type.</description>
    <inlineHelpText>This field will calculate the Enrolled provider counts from the Regular Class Type.</inlineHelpText>
    <label>Count of Enrollment</label>
    <summaryFilterItems>
        <field>Attendance__c.Class_Type__c</field>
        <operation>equals</operation>
        <value>Regular</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Roaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>