force-app/main/default/objects/Roaster__c/fields/Count_Of_Regular_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Regular_Attendance__c</fullName>
    <description>Count Of Regular Attendance used in the View Roster component in order to show the Regular Attendance Component from the Roster page - Mark Attendance usually are two types. 1) Regular Attendance 2) Make-Up Class Attendance. This field should be used in backened not in Record page</description>
    <label>Count Of Regular Attendance</label>
    <summaryFilterItems>
        <field>Attendance__c.Class_Type__c</field>
        <operation>equals</operation>
        <value>Regular</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Roaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>