force-app/main/default/objects/Roaster__c/fields/Is_it_a_CNA_CPR_class__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_CNA_CPR_class__c</fullName>
    <label>Is it a CNA/CPR class?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNA</fullName>
            </value>
            <value>
                <fullName>CPR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>