force-app/main/default/objects/Roaster__c/fields/Make_Up_Count__c.field-meta.xml
<CustomField>
    <fullName>Make_Up_Count__c</fullName>
    <label>Make-Up Count</label>
    <summaryFilterItems>
        <field>Attendance__c.Status__c</field>
        <operation>equals</operation>
        <value>Absent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.MakeUp_Created__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Makeup_Class_status__c</field>
        <operation>equals</operation>
        <value>Need to attend make-up class, Absent, Need to attend make-up class</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Roaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>