force-app/main/default/objects/Roaster__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Modules__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Modules__c</referenceTo>
    <relationshipName>Rosters</relationshipName>
    <type>Lookup</type>
</CustomField>