force-app/main/default/objects/Roaster__c/fields/Ratio__c.field-meta.xml
<CustomField>
    <fullName>Ratio__c</fullName>
    <formula>TEXT( Instructor_Count_Ratio__c ) &amp; &quot;:&quot; &amp; TEXT( Student_Count_Ratio__c)</formula>
    <label>Ratio</label>
    <type>Text</type>
</CustomField>