force-app/main/default/objects/Roaster__c/fields/Regular_Duration__c.field-meta.xml
<CustomField>
    <fullName>Regular_Duration__c</fullName>
    <label>Regular Duration</label>
    <summarizedField>CNA_Training__c.Duration_of_Class__c</summarizedField>
    <summaryFilterItems>
        <field>CNA_Training__c.Class_Type__c</field>
        <operation>equals</operation>
        <value>Regular</value>
    </summaryFilterItems>
    <summaryForeignKey>CNA_Training__c.Roster__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>