force-app/main/default/objects/Roaster__c/fields/Session_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Session_Order_Number__c</fullName>
    <description>This must be auto-filled from 01-so on. 
Based on this Roster Order Number, respective Modules should be mapped with help of &quot;Module Order Number&quot; depending on the Course selected on Class.</description>
    <label>Session Order Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>