force-app/main/default/objects/Roaster__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Need to create Make-Up</fullName>
            </value>
            <value>
                <fullName>Make-Up Ongoing</fullName>
            </value>
            <value>
                <fullName>Make-Up not Required</fullName>
            </value>
            <value>
                <fullName>Make-Up Class Completed</fullName>
                <isActive>false</isActive>
                <label>Make-Up Class Completed</label>
            </value>
            <value>
                <fullName>MakeUp Class</fullName>
                <isActive>false</isActive>
                <label>MakeUp Class</label>
            </value>
            <value>
                <fullName>Postponed</fullName>
                <isActive>false</isActive>
                <label>Postponed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>