force-app/main/default/objects/Roaster__c/fields/Total_Absent_For_Make_Up__c.field-meta.xml
<CustomField>
    <fullName>Total_Absent_For_Make_Up__c</fullName>
    <description>This field will calculate the total absent from the class type &quot;Make-Up&quot; from the attendance records.</description>
    <inlineHelpText>This field will calculate the total absent from the class type &quot;Make-Up&quot; from the attendance records.</inlineHelpText>
    <label>Total Absent For Make-Up</label>
    <summaryFilterItems>
        <field>Attendance__c.Status__c</field>
        <operation>equals</operation>
        <value>Absent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Class_Type__c</field>
        <operation>equals</operation>
        <value>Make-up</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Roaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>