force-app/main/default/objects/Roaster__c/fields/Total_Present__c.field-meta.xml
<CustomField>
    <fullName>Total_Present__c</fullName>
    <description>This Total Present field calculates the total present records from the overall attendance related to &quot;Regular&quot; and &quot;Make-Up Class&quot;.</description>
    <inlineHelpText>This Total Present field calculates the total present records from the overall attendance related to &quot;Regular&quot; and &quot;Make-Up Class&quot;.</inlineHelpText>
    <label>Total Present</label>
    <summaryFilterItems>
        <field>Attendance__c.Status__c</field>
        <operation>equals</operation>
        <value>Present</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Roaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>