force-app/main/default/objects/Roaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class_Scheduled_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>